<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoxBot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_part_config">PartConfig</string>
    
    <string name="home_header">Welcome</string>
    <string name="home_button_map">Map</string>
    <string name="home_button_friends">Friends</string>
    <string name="home_button_parts">Parts</string>
    <string name="home_button_settings">Settings</string>
    <string name="home_health">Health: </string>

    <!-- start of my strings -->
    <string name="bar_map">World Map</string>
    <string name="bar_friends">Friends</string>
    <string name="bar_parts">Parts</string>
    <string name="bar_settings">Settings</string>
    <string name="friend_list">List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="map_location_button">Print your location.</string>

</resources>
