<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boxbot.android.PartConfig" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
	
	<LinearLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingLeft="5dp"
    	android:paddingRight="5dp"
    	android:layout_alignParentBottom="true"
    	android:orientation="horizontal" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_map"
        android:onClick="jump_map" />
	<Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_friends"
		android:onClick="jump_friends"/>
	<Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_parts" 
        android:onClick="jump_parts"/>
	<Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_settings" 
        android:onClick="jump_settings"/>
	</LinearLayout>
</RelativeLayout>
